Set up of Serigramall.Web.Client and Serigramall.Web.Provider projects

--- a/Serigramall.Web.Provider/package.json
+++ b/Serigramall.Web.Provider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serigramall-web",
+  "name": "serigramall-web-provider",
   "private": true,
   "version": "0.0.0",
   "type": "module",
