--- a/Serigramall.Web.Provider/package.json
+++ b/Serigramall.Web.Provider/package.json
@@ -13,7 +13,9 @@
     "auth0": "^2.42.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-async": "^10.0.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0-beta.10",
