Created GetUsers endpoint

--- a/Serigramall.API/Serigramall.API/Serigramall.API.csproj
+++ b/Serigramall.API/Serigramall.API/Serigramall.API.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>34ea7630-6340-44c6-ba74-95d4c604bb46</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Auth0.AuthenticationApi" Version="7.17.2" />
+    <PackageReference Include="Auth0.ManagementApi" Version="7.17.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.28" />
     <PackageReference Include="MongoDB.Bson" Version="2.17.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
