--- a/Serigramall.API/Serigramall.API/appsettings.json
+++ b/Serigramall.API/Serigramall.API/appsettings.json
@@ -15,6 +15,6 @@
   "AllowedHosts": "*",
   "Auth0": {
     "Domain": "dev-x89v66tk.us.auth0.com",
-    "Audience": "https://express.sample"
+    "Audience": "https://serigramall.com"
   }
 }
