Custom useAuth0 hook is working with some errors

--- a/Serigramall.Web.Provider/.env
+++ b/Serigramall.Web.Provider/.env
@@ -4,3 +4,4 @@ VITE_AUTH0_AUDIENCE=https://serigramall.com
 VITE_AUTH0_DB_CONNECTION=Username-Password-Authentication
 
 VITE_SERVER_API_URL=https://localhost:44355
+VITE_RETURN_URL=http://localhost:5001
