--- a/Serigramall.Web.Client/package.json
+++ b/Serigramall.Web.Client/package.json
@@ -12,6 +12,7 @@
     "@auth0/auth0-react": "^1.10.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
