--- a/Serigramall.Web.Provider/package.json
+++ b/Serigramall.Web.Provider/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
+    "react-promise-tracker": "^2.1.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "superagent-proxy": "^3.0.0"
