--- a/Serigramall.API/Serigramall.API/Serigramall.API.csproj
+++ b/Serigramall.API/Serigramall.API/Serigramall.API.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Auth0.AuthenticationApi" Version="7.17.2" />
     <PackageReference Include="Auth0.ManagementApi" Version="7.17.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.28" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.29" />
     <PackageReference Include="MongoDB.Bson" Version="2.17.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
