Revert "cambios api"
This reverts commit 05f86d6b1033a40b890b3bc65207483a7fde0e17, reversing
changes made to f25f6d99623907db6043a974f02c5604d445d0e5.

--- a/Serigramall.API/Serigramall.API/appsettings.json
+++ b/Serigramall.API/Serigramall.API/appsettings.json
@@ -15,6 +15,6 @@
   "AllowedHosts": "*",
   "Auth0": {
     "Domain": "dev-x89v66tk.us.auth0.com",
-    "Audience": "https://serigramall.com"
+    "Audience": "https://express.sample"
   }
 }
