--- a/Serigramall.API/Serigramall.API/appsettings.json
+++ b/Serigramall.API/Serigramall.API/appsettings.json
@@ -14,7 +14,9 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "dev-x89v66tk.us.auth0.com",
-    "Audience": "https://serigramall.com"
+    "Provider": {
+      "Domain": "dev-x89v66tk.us.auth0.com",
+      "Audience": "https://serigramall.com"
+    }
   }
 }
