Change password and fixed different bugs

--- a/Serigramall.API/Serigramall.API/appsettings.json
+++ b/Serigramall.API/Serigramall.API/appsettings.json
@@ -17,6 +17,10 @@
     "Provider": {
       "Domain": "dev-x89v66tk.us.auth0.com",
       "Audience": "https://serigramall.com"
+    },
+    "Client": {
+      "Domain": "dev-stkizus4.us.auth0.com",
+      "Audience": "https://serigramall.com"
     }
   }
 }
