--- a/Serigramall.API/Serigramall.API/Properties/launchSettings.json
+++ b/Serigramall.API/Serigramall.API/Properties/launchSettings.json
@@ -1,18 +1,8 @@
 {
-
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:37125",
-      "sslPort": 44355
-    }
-  },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "Swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -32,6 +22,15 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/Swagger",
       "publishAllPorts": true,
       "useSSL": true
+    }
+  },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:37125",
+      "sslPort": 44355
     }
   }
 }
