--- a/Serigramall.Web.Provider/package.json
+++ b/Serigramall.Web.Provider/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0-beta.10",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-select": "^5.5.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
