--- a/Serigramall.API/Serigramall.API/Serigramall.API.csproj
+++ b/Serigramall.API/Serigramall.API/Serigramall.API.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MongoDB.Bson" Version="2.17.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.IO.Packaging" Version="6.0.0" />
   </ItemGroup>
 
 
