--- a/Serigramall.API/Serigramall.API/Serigramall.API.csproj
+++ b/Serigramall.API/Serigramall.API/Serigramall.API.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Auth0.AuthenticationApi" Version="7.17.2" />
     <PackageReference Include="Auth0.ManagementApi" Version="7.17.2" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.28" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.29" />
