--- a/.github/workflows/SerigramallAPI.yml
+++ b/.github/workflows/SerigramallAPI.yml
@@ -8,7 +8,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: Serigramall.API\publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 5.0.x
-  WORKING_DIRECTORY: Serigramall.API
+  WORKING_DIRECTORY: Serigramall.API\Serigramall.API
 jobs:
   build:
     runs-on: windows-latest
