--- a/Serigramall.Web.Provider/package.json
+++ b/Serigramall.Web.Provider/package.json
@@ -12,10 +12,12 @@
     "@auth0/auth0-react": "^1.10.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "i18next": "^22.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.5.7"
