--- a/Serigramall.Web.Provider/.env
+++ b/Serigramall.Web.Provider/.env
@@ -3,4 +3,4 @@ VITE_AUTH0_CLIENT_ID=WT7aAlguqhHjOyidU6PUAFt5tztJAWL5
 VITE_AUTH0_AUDIENCE=https://serigramall.com
 VITE_AUTH0_DB_CONNECTION=Username-Password-Authentication
 
-VITE_SERVER_API_URL=https://localhost:44355/api
+VITE_SERVER_API_URL=https://serigramallapi.azurewebsites.net
