--- a/Serigramall.Web.Client/.env
+++ b/Serigramall.Web.Client/.env
@@ -3,4 +3,4 @@ VITE_AUTH0_CLIENT_ID=oORAJZ5MJom9msveu1lRApCXxEiXfVMP
 VITE_AUTH0_AUDIENCE=https://serigramall.com
 VITE_AUTH0_DB_CONNECTION=Username-Password-Authentication
 
-VITE_SERVER_API_URL=https://localhost:44355
+VITE_SERVER_API_URL=https://localhost:44355/api
